# finance-app

./: .flake8  .gitignore  .pydocstyle  MANIFEST.in  Pipfile  README.md  dodo.py  requirements.txt  setup.cfg
FinanceApp/: __init__.py  __main__.py  application.py  utils.py
FinanceApp/month_window/: __init__.py  category_button.py  category_window.py  information_window.py  month_window.py
FinanceApp/statistic_window/: __init__.py  statistic_window.py
docs/: conf.py  index.rst  month_window.rst  statistic_window.rst
docs/source/: conf.py  index.rst
ru/LC_MESSAGES/: Months.po
src/: Months.pot  application.py  category.py  group_storage.py  statistics.py  utils.py
src/month_window/: __init__.py  category_button.py  category_window.py  control_window.py  entry_window.py  information_window.py  month_window.py
src/ru/LC_MESSAGES/: Months.po
test/: __init__.py
test/month_window/: test_category_window.py
test/statistic_window/: test_statistic_window.py
