[metadata]
name = FinanceApp
version = 1.0.0
url = https://github.com/Lorien2027/finance-app.git
author = 'Nikita Lisin & Dmitry Malyugin'

[options]
packages = FinanceApp, FinanceApp.month_window, FinanceApp.statistic_window
include_package_data = True
install_requires =
    matplotlib==3.3.4
    pillow==8.1.0
    pandas==1.2.2
    seaborn==0.11.1

[options.package_data]
FinanceApp = */*/Months.mo
FinanceApp.month_window = */*.png

[options.entry_points]
console_scripts = FinanceApp = FinanceApp.application:main